Fixed spacing right and left of the text boxes on mobile

--- a/app/assets/stylesheets/_landing.css.scss
+++ b/app/assets/stylesheets/_landing.css.scss
@@ -126,6 +126,11 @@ $blue: #0066A3;
     h3, h4, p{
       padding-left: 40px;
       padding-right: 40px;
+
+      @include media($break-xxsmall) {
+        padding-left: 0px;
+        padding-right: 0px;
+      }
     }
 
     h3  {
@@ -157,11 +162,11 @@ $blue: #0066A3;
       margin-left: auto;
       margin-right: auto;
       max-width: 750px;
-    }
 
-    @include media($break-xxsmall) {
-      padding-left: 0px;
-      padding-right: 0px;
+      @include media($break-xxsmall) {
+        padding-left: 0px;
+        padding-right: 0px;
+      }
     }
   }
 
